--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true,
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "allow-plugins": {
+      "infection/extension-installer": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -37,14 +40,14 @@
     "php": ">=7.4"
   },
   "require-dev": {
-    "infection/infection": "^0.21.5",
-    "php-parallel-lint/php-parallel-lint": "^1.2",
-    "phpstan/phpstan": "^0.12.58 || ^1.0.0",
+    "infection/infection": "^0.26",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpstan/phpstan": "^1.4",
     "phpunit/phpunit": "^9.5",
-    "psy/psysh": "^0.10.5 || ^0.11.0",
-    "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^4.3"
+    "psy/psysh": "^0.11",
+    "roave/security-advisories": "dev-latest",
+    "squizlabs/php_codesniffer": "^3.6",
+    "vimeo/psalm": "^4.8"
   },
   "scripts": {
     "console": "vendor/bin/psysh",
